<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp" >

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/profile_info"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:hint="@string/first_name"
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:hint="@string/last_name"
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:hint="@string/email"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:hint="@string/username"
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:hint="@string/age"
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:hint="@string/phone"
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="80dp" >

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/save"
            android:id="@+id/btnSave"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:layout_marginEnd="15dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/clear"
            android:id="@+id/btnClear"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:layout_marginStart="15dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:text=""
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

</androidx.appcompat.widget.LinearLayoutCompat>